Fixed css width so its not stretched on smaller displays, updated policy and book button, not visible for users who are the owner of the activity

--- a/app/assets/stylesheets/pages/_forms.scss
+++ b/app/assets/stylesheets/pages/_forms.scss
@@ -19,7 +19,7 @@ button a {
   background: $grey;
   position: absolute;
   width: 50%;
-  height: 869px;
+  height: 100%;
   left: 0px;
   top: 134px;
   justify-content: center;
@@ -47,9 +47,9 @@ button a {
   justify-content: center;
   position: absolute;
   width: 50%;
-  height: 611px;
-  left: 800px;
-  top: 200px;
+  height: 15%;
+  left: 50%;
+  top: 150px;
 
     .form-label {
       margin-bottom: 0.5rem;
